[package]
name = "md_concat"
description = "A command-line utility to recursively search directories for files with specified extensions, sort them, and concatenate their contents into a single Markdown file. Each file's content is placed within a fenced code block, labeled with the file's relative path."
license = "MIT"
authors = ["Daniel Fekete <dande.fekete@gmail.com>"]
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] } # Use the latest version available
walkdir = "2.4" # Useful for directory traversal
ignore = "0.4" # Provides .gitignore parsing and matching
globset = "0.4" # For glob pattern matching